# synod_backend

./: .gitignore  Cargo.toml  agent_connect.md  docker-compose.yml  render.yaml  scratch.mjs
synod-coordinator/: .env.example  .gitignore  Cargo.toml  synod-mcp.code-workspace
synod-coordinator/config/: default.toml
synod-coordinator/examples/: generate_keys.rs  seed_demo.rs
synod-coordinator/migrations/: 20260330000001_initial.sql  20260331000001_phase_8_permits.sql  20260402000001_agent_allocations.sql  20260402220000_add_fast_token_hash.sql  20260414000000_synod_connect_v1.sql
synod-coordinator/src/: agent.rs  auth.rs  config.rs  constitution.rs  dashboard.rs  error.rs  horizon.rs  lib.rs  main.rs  mcp.rs  multisig.rs  permit.rs  proposal.rs  resync.rs  stellar.rs  treasury.rs  wallet.rs
synod-coordinator/src/policy/: mod.rs  rules.rs
synod-coordinator/tests/: agents.rs  auth.rs  constitution.rs  dashboard.rs  halt.rs  mcp_regression.rs  migrations.rs  multisig.rs  permits.rs  policy_evaluation.rs  policy_rules.rs  redis_connection.rs  wallet.rs
synod-coordinator/tests/common/: mod.rs
synod-dashboard/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js
synod-dashboard/app/: globals.css  layout.tsx  page.tsx
synod-dashboard/app/dashboard/: page.tsx
synod-dashboard/app/login/: page.tsx
synod-dashboard/app/signup/: page.tsx
synod-dashboard/components/: login-form.tsx
synod-dashboard/components/dashboard/: agent-manager.tsx  multisig-setup.tsx  policy-manager.tsx  sidebar.tsx  topbar.tsx  wallet-card.tsx  wallet-connect.tsx
synod-dashboard/components/ui/: button.tsx  input.tsx
synod-dashboard/hooks/: use-auth.ts  use-socket.ts  use-stellar-wallet.ts
synod-dashboard/public/: synod-dashboard.html
synod-dashboard/src/: App.tsx  index.css
synod-dashboard/src/components/: AgentManager.tsx  Login.tsx  WalletConnect.tsx
synod-sdk-python/: SKILL.md  pyproject.toml
synod-sdk-python/synod/: __init__.py  crypto.py  errors.py  mcp.py  ws.py
synod-sdk-python/tests/: test_agent.py
synod-shared/: Cargo.toml
synod-shared/src/: consts.rs  events.rs  lib.rs  models.rs
