[workspace]
members = [
    "synod-coordinator",
    "synod-shared"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal"] }
redis = { version = "0.25", features = ["tokio-comp", "json", "connection-manager"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
bigdecimal = { version = "0.4", features = ["serde"] }
