[package]
name = "synod-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
synod-shared = { path = "../synod-shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
bigdecimal = { workspace = true }
bcrypt = "0.19.0"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
axum-extra = { version = "0.9.0", features = ["typed-header"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
