[package]
name = "synod-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
synod-shared = { path = "../synod-shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
bigdecimal = { workspace = true }
bcrypt = "0.19.0"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
stellar-xdr = { version = "21.0.0", features = ["std"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
sha2 = "0.10.8"
data-encoding = "2.6.0"
reqwest = { version = "0.12.0", features = ["json"] }
reqwest-eventsource = "0.6.0"
futures = "0.3"
hex = "0.4.3"
http = "1.1"

[dev-dependencies]
rand = "0.8.5"
tokio-tungstenite = "0.24"
