[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synod-sdk"
version = "0.1.0"
description = "Synod Agent SDK — connect, execute, and manage treasury operations"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "stellar-sdk>=9.0",
    "cryptography>=42.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aioresponses"]

[project.scripts]
synod-mcp = "synod.mcp:cli"
